# Notly

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  LICENSE  README.md  codebook.toml  electron-builder.yml  eslint.config.mjs  index.html  next.config.ts  note_app_requirements.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mts  prisma.config.ts  requirements.md  tsconfig.electron.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: api-design.md  architecture.md  contributing.md  setup.md
prisma/: dev.db  schema.prisma  seed.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: activity.rs  app.rs  assets.rs  backup.rs  files.rs  folder.rs  hotkeys.rs  mod.rs  note.rs  notification.rs  tags.rs  template.rs
src-tauri/src/db/: connect.rs  migrate.rs  mod.rs  models.rs
src-tauri/src/services/: activity.rs  assets.rs  backup.rs  files.rs  folder.rs  hotkeys.rs  mod.rs  note.rs  notification.rs  tags.rs  template.rs
tasks/: P1-keyboard-shortcuts.md  P1-trash-feature.md  P2-bookmark-feature.md  P2-export-import.md  P2-note-history.md  P2-tag-system.md  P3-advanced-search.md  P3-folder-color.md  P3-note-template.md  README.md  backup-feature.md  global-hotkeys.md  notes_folders.md  performance-optimization.md  roadmap.md
todo/: 01_delete_confirmation.md  02_move_files_ui.md  02_move_menu_ui.md  03_context_menu.md  04_sort_feature.md  05_note_preview.md  (+2 more)
(+222 files in other folders)
